--- a/programs/test.tt
+++ b/programs/test.tt
@@ -876,11 +876,11 @@ function testworker() {
 	call assert_throws( "Expected '(' after '$worker'", ${ () { call $worker( ${ x } ); } } );
 	call assert_throws( "Invalid name '1'", ${ () { call $worker( ${ ( 1 ) {} } ); } } );
 	call assert_throws( "Parameter 'x' already", ${ () { call $worker( ${ ( x x ) {} } ); } } );
-	call assert_throws( "Not a worker", ${ () { call $execute( 0 ); } } );
+	call assert_throws( "Not an instance of 'Worker'", ${ () { call $execute( 0 ); } } );
 	call assert_throws( "Incorrect number", ${ () { call $execute( $worker( ${ ( a ) {} } ) ); } } );
 	call assert_throws( "Worker locked", ${ () { var w = $worker( ${ () {} } ); lock w { call $execute( w ); } } } );
 	call assert_throws( "Values of this type", ${ () { call $execute( $worker( ${ ( a ) {} } ), ${ x } ); } } );
-	call assert_throws( "Not a worker", ${ () { call $result( 0 ); } } );
+	call assert_throws( "Not an instance", ${ () { call $result( 0 ); } } );
 	call assert_throws( "Worker locked", ${ () { var w = $worker( ${ () {} } ); lock w { call $result( w ); } } } );
 	call assert_throws( "Worker exited", ${ () { call $result( $execute( $worker( ${ () { exit 0; } } ) ) ); } } );
 	call assert_throws( "Values of this type", ${ () { call $result( $execute( $worker( ${ () { return $array( 0 ); } } ) ) ); } } );
