--- a/programs/test.tt
+++ b/programs/test.tt
@@ -264,14 +264,14 @@ function testwhile() {
 	call assert_equals( 1, :( $function( ${ () { while TRUE { return 1; } return 0; } } ) ), ${-} );
 	var off, end = 10;
 	while <( off end ) {
-		var aaa, bbb = 0;
+		var aaa, bbb = 1;
 		inc aaa;
-		inc bbb;
+		dec bbb;
 		inc off;
 	}
 	call assert_equals( 10, off, ${-} );
 	call assert_equals( 10, aaa, ${-} );
-	call assert_equals( 1, bbb, ${-} );
+	call assert_equals( 0, bbb, ${-} );
 	while <( z y ) { call assert( FALSE, ${-} ); }
 	while <e( z y ) { call assert( FALSE, ${-} ); }
 	while >( y z ) { call assert( FALSE, ${-} ); }
@@ -984,11 +984,13 @@ function testoptimizer() {
 	let acc = +( 1 +( 1 +( 1 +( 1 +( 1 +( 1 +( 1 1 ) ) ) ) ) ) );
 	call assert_equals( 8, acc, ${-} );
 	let acc = +( 1 val++ );
-	call assert_equals( 1, acc, ${-} );
+	inc acc;
+	call assert_equals( 2, acc, ${-} );
 	call assert_equals( 1, val, ${-} );
 	call assert_throws( "Not an integer", ${ () { var s = ""; let s = +( 1 s++ ); } } );
 	let acc = +( 1 val-- );
-	call assert_equals( 2, acc, ${-} );
+	dec acc;
+	call assert_equals( 1, acc, ${-} );
 	call assert_equals( 0, val, ${-} );
 	call assert_throws( "Not an integer", ${ () { var s = ""; let s = +( 1 s-- ); } } );
 	let acc = +( 1 $tup( str 1 ) );
