--- a/programs/test.tt
+++ b/programs/test.tt
@@ -233,6 +233,12 @@ function testif() {
 	if >e( y z ) { call assert( FALSE, ${-} ); }
 	if =( y z ) { call assert( FALSE, ${-} ); }
 	if <>( y z ) {} else { call assert( FALSE, ${-} ); }
+	if <( y 1 ) {} else { call assert( FALSE, ${-} ); }
+	if <e( y 1 ) {} else { call assert( FALSE, ${-} ); }
+	if >( y 1 ) { call assert( FALSE, ${-} ); }
+	if >e( y 1 ) { call assert( FALSE, ${-} ); }
+	if =( y 1 ) { call assert( FALSE, ${-} ); }
+	if <>( y 1 ) {} else { call assert( FALSE, ${-} ); }
 	if <>( y s ) { call assert( FALSE, ${-} ); }
 	call assert_throws( "1", ${ () { if except( ${ 1 } ) { call except( ${ 2 } ); } } } );
 	call assert_throws( "Expected '{'", ${ () { if 0 {} else } } );
@@ -246,7 +252,7 @@ function testwhile() {
 		break;
 		call assert( FALSE, ${-} );
 	}
-	while <( n 10 ) {
+	while <e( n 9 ) {
 		if =( n 5 ) { break; }
 		inc n;
 		continue;
@@ -278,6 +284,12 @@ function testwhile() {
 	while >e( y z ) { call assert( FALSE, ${-} ); }
 	while =( y z ) { call assert( FALSE, ${-} ); }
 	while <>( y y ) { call assert( FALSE, ${-} ); }
+	while <( z 0 ) { call assert( FALSE, ${-} ); }
+	while <e( z 0 ) { call assert( FALSE, ${-} ); }
+	while >( y 1 ) { call assert( FALSE, ${-} ); }
+	while >e( y 1 ) { call assert( FALSE, ${-} ); }
+	while =( y 1 ) { call assert( FALSE, ${-} ); }
+	while <>( y 0 ) { call assert( FALSE, ${-} ); }
 	while <>( y s ) { call assert( FALSE, ${-} ); }
 	call assert_throws( "1", ${ () { while except( ${ 1 } ) { call assert( FALSE, ${-} ); } } } );
 	call assert_throws( "1", ${ () { while TRUE { call except( ${ 1 } ); } } } );
